objects/Lost_Serialized_Product__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Lost__c</fullName>
        <label>Date of Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Of_Lost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Of Lost</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Lost Serialized Product</relationshipLabel>
        <relationshipName>Lost_Serialized_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Loss__c</fullName>
        <label>Reason for Loss</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialized_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Serialized Product</label>
        <referenceTo>SerializedProduct</referenceTo>
        <relationshipLabel>Lost Serialized Product</relationshipLabel>
        <relationshipName>Lost_Serialized_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Responsible_for_Loss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Responsible for Loss</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lost_Serialized_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lost Serialized Product</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Serialized Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>